Fixed the css alignment issue in label overlapping

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -96,7 +96,16 @@ input:valid ~ .inputs-img {
         color: #0089d1;
       }
 }
-
+.invalid-input {
+  label{
+    top: -8px !important;
+    font-size: 14px !important;
+    background: #fff;
+    color: #4285f4;
+    left: 17px !important;
+    padding: 0 6px;
+  }
+}
 .bar {
   position: relative;
   display: block;
@@ -150,6 +159,7 @@ input:focus~.highlight {
     border-color: #999 !important;
   }
 }
+
 
 /* animations */
 @-webkit-keyframes inputHighlighter {
